# ash

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  flake2.nix
rsh_derive/: Cargo.toml
rsh_derive/src/: lib.rs
src/: builtin.rs  builtins.rs  command.rs  comp.rs  environment.rs  error.rs  event.rs  execute.rs  expand.rs  helper.rs  interpret.rs  lash.pest  lib.rs  main.rs  nested2.sh  pair.rs  parser.rs  parser2.rs  pest_ext.rs  prelude.rs  prompt.rs  rsh.pest  rsh2.pest  shellenv.rs  shopt.rs  signal.rs  tests.rs  utils.rs
src/builtin/: alias.rs  assign.rs  cd.rs  cmd_override.rs  control.rs  dir_stack.rs  echo.rs  exec.rs  export.rs  fg.rs  job.rs  mod.rs  opts.rs  pwd.rs  source.rs  test.rs
src/execute/: assignment.rs  builtin.rs  command.rs  dispatch.rs  func.rs  mod.rs  pipeline.rs  subshell.rs
src/expand/: brace.rs  cmdsub.rs  dispatch.rs  glob.rs  index.rs  misc.rs  mod.rs  string.rs
src/interp/: debug.rs  expand.rs  helper.rs  mod.rs  parse.rs  parse2.rs  token.rs
src/interp/snapshots/: rsh__interp__parse__test__parser_command_sub.snap  rsh__interp__parse__test__parser_command_sub.snap.new  rsh__interp__parse__test__parser_final_boss.snap  rsh__interp__parse__test__parser_for_loop.snap  rsh__interp__parse__test__parser_if_statement.snap  rsh__interp__parse__test__parser_multiple_args.snap  rsh__interp__parse__test__parser_quoted_args.snap  rsh__interp__parse__test__parser_redirection_complex.snap  rsh__interp__parse__test__parser_redirection_simple.snap  rsh__interp__parse__test__parser_simple.snap  rsh__interp__parse__test__parser_until_loop.snap  rsh__interp__parse__test__parser_while_loop.snap  (+16 more)
src/old/: comp.rs  event.rs  execute.rs  lash.pest  main.rs  shellenv.rs  shopt.rs  signal.rs  tests.rs
src/old/interp/: helper.rs  parse.rs  (+1 more)
src/pest/: lash_lang.pest
src/prompt/: comp.rs  highlight.rs  hint.rs  mod.rs  prompt.rs  rl_init.rs  validate.rs
src/rsh/: parse.rs  rsh.pest
src/script/: fordo.rs  ifthen.rs  loopdo.rs  matchdo.rs  mod.rs  select.rs
src/src/: main.rs  prompt.rs  shellenv.rs
tests/: basic_case.sh  basic_commands.sh  basic_for.sh  basic_if.sh  basic_until.sh  basic_var_sub.sh  basic_while.sh  chain.sh  empty_var_sub.sh  parser_tests.rs  pipeline.sh  very_nested.sh
(+5 files in other folders)
