[package]
name = "rsh"
description = "A linux shell written in rust"
publish = false
version = "0.1.0"

edition = "2021"

[dependencies]
regex = "1.11.1"
log = "0.4.22"
tokio = { version = "1.41.1", features = ["full"] }
env_logger = "0.11.5"
thiserror = "2.0.3"
tokio-stream = { version = "0.1.16", features = ["full"] }
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["fs", "default", "signal", "process", "event", "ioctl"] }
libc = "0.2.167"
once_cell = "1.20.2"
glob = "0.3.1"
