[package]
name = "lash"
description = "A linux shell written in rust"
publish = false
version = "0.1.0"

edition = "2021"

[profile.release]
debug = true

[dependencies]
regex = "1.11.1"
tokio = { version = "1.41.1", features = ["full"] }
env_logger = "0.11.5"
tokio-stream = { version = "0.1.16", features = ["full"] }
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["user", "hostname", "fs", "default", "signal", "process", "event", "ioctl"] }
libc = "0.2.167"
once_cell = "1.20.2"
glob = "0.3.1"
bitflags = "2.8.0"
rustyline = { version = "15.0.0", features = [ "derive" ] }
chrono = "0.4.39"
crossterm = "0.28.1"
skim = "0.15.7"
signal-hook = "0.3.17"
logger = "0.4.0"
insta = "1.42.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = [ "serde_derive" ] }
serde_json = "1.0.137"
log = "0.4.25"
bincode = "1.3.3"
pest = "2.7.15"
pest_derive = "2.7.15"
